// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResthookRouterForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "disabled": true,
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="call_resthook"
  title="Call Zapier"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "split_by_resthook",
        ],
        "component": [Function],
        "description": "Call Zapier",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Call Zapier",
        "type": "call_resthook",
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    entry={
      Object {
        "value": Object {
          "id": "my-resthook",
          "name": "my-resthook",
          "type": "resthook",
        },
      }
    }
    name="Resthook"
    onChange={[Function]}
    placeholder="Select the resthook to call"
    searchable={true}
  />
</Dialog>
`;

exports[`ResthookRouterForm updates coverts from other node types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "type": "call_resthook",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
        Object {
          "destination_uuid": null,
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
        Object {
          "destination_uuid": null,
          "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "type": "has_webhook_status",
            "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "category_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
            "type": "has_webhook_status",
            "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          },
          Object {
            "arguments": Array [
              "response_failure",
            ],
            "category_uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
            "type": "has_webhook_status",
            "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Success",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
          Object {
            "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "name": "Failed",
            "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
          },
          Object {
            "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "name": "Unreachable",
            "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          },
        ],
        "default_category_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;

exports[`ResthookRouterForm updates creates its own action uuid if necessary 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "type": "call_resthook",
          "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
        },
        Object {
          "destination_uuid": null,
          "uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
        },
        Object {
          "destination_uuid": null,
          "uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "category_uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
            "type": "has_webhook_status",
            "uuid": "141e0356-9fdd-47d3-a12d-16efc5b45276",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "category_uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
            "type": "has_webhook_status",
            "uuid": "e81b3f1a-0863-4418-8a72-9c9f8aa72b7c",
          },
          Object {
            "arguments": Array [
              "connection_error",
            ],
            "category_uuid": "f05fa107-03db-4315-a211-53da63603e6f",
            "type": "has_webhook_status",
            "uuid": "1888ae1f-2518-4727-98e2-731674e1760e",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
            "name": "Success",
            "uuid": "00dd2423-0a34-4ee2-b97d-839fb2d593ef",
          },
          Object {
            "exit_uuid": "9adce29f-da95-4182-9cb3-0f1e3bf714e5",
            "name": "Failed",
            "uuid": "c5722340-f7e1-4d99-ac5e-3a6e59845111",
          },
          Object {
            "exit_uuid": "6b59e863-2e14-442b-9987-aaa284871b8e",
            "name": "Unreachable",
            "uuid": "f05fa107-03db-4315-a211-53da63603e6f",
          },
        ],
        "default_category_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;

exports[`ResthookRouterForm updates should update and save 1`] = `
Object {
  "resthook": Object {
    "validationFailures": Array [],
    "value": Object {
      "id": "new-resthook",
      "name": "new-resthook",
      "type": "resthook",
    },
  },
  "valid": true,
}
`;

exports[`ResthookRouterForm updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "type": "call_resthook",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
        Object {
          "destination_uuid": null,
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
        Object {
          "destination_uuid": null,
          "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "type": "has_webhook_status",
            "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "category_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
            "type": "has_webhook_status",
            "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          },
          Object {
            "arguments": Array [
              "response_failure",
            ],
            "category_uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
            "type": "has_webhook_status",
            "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Success",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
          Object {
            "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "name": "Failed",
            "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
          },
          Object {
            "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "name": "Unreachable",
            "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
          },
        ],
        "default_category_uuid": null,
        "operand": "@child",
        "type": "switch",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;
